[workspace]
members = [
    "druid",
    "druid-shell",
    "druid-derive",
    "druid-debugger",
    "docs/book_examples",
    "druid/examples/web",
    "druid/examples/hello_web",
    "druid/examples/value_formatting",
]
default-members = [
    "druid",
    "druid-debugger",
    "druid-shell",
    "druid-derive",
]

[patch.'https://github.com/linebender/druid']
druid = { path = "druid" }