[package]
name = "druid-debugger"
version = "0.1.0"
authors = ["Manmeet Maan <manmeetmann2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { path = "../druid", features = ["im"] }
druid_table = { git =  "https://github.com/rjwittams/druid_table" }

